<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ButtonStyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activity.HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_buttons_layout_height"
            android:layout_marginTop="@dimen/spacing_32"
            android:orientation="horizontal">

            <Button
                android:layout_width="@dimen/search_btn_size"
                android:layout_height="@dimen/search_btn_size"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_16"
                android:background="@drawable/search_button_selector" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/header_btn_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_8"
                android:background="#E0E0E0"
                android:text="@string/for_you"
                android:textColor="@color/black_color"
                android:textSize="@dimen/size_12"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/header_btn_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_4"
                android:background="#E0E0E0"
                android:text="@string/travel"
                android:textColor="@color/black_color"
                android:textSize="@dimen/size_12"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/header_btn_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_4"
                android:background="#E0E0E0"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/spirituality"
                android:textColor="@color/black_color"
                android:textSize="@dimen/size_12"
                android:textStyle="bold"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/header_btn_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/spacing_4"
                android:background="#E0E0E0"
                android:maxLines="1"
                android:text="@string/mutual"
                android:textColor="@color/black_color"
                android:textSize="@dimen/size_12"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/friends"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycles_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:scrollbars="horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_32"
            android:text="@string/trending"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycles_trending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_16"
            android:layout_marginTop="@dimen/spacing_16"
            android:scrollbars="horizontal" />
    </LinearLayout>

    <include layout="@layout/map_bottomsheet_layout"
        />
</android.support.design.widget.CoordinatorLayout>