<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/trending_layout_width"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginEnd="@dimen/spacing_8"
    tools:ignore="contentDescription">

    <android.support.v7.widget.CardView
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/trending_card_height"
        app:cardCornerRadius="@dimen/trending_card_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_color">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:scaleType="fitXY"
                android:src="@drawable/travel1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/location_name"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/spacing_5"
                android:text="@string/valparaiso"
                android:textColor="@color/white_color"
                android:textSize="@dimen/size_10" />

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="@dimen/trending_profile_img_size"
                android:layout_height="@dimen/trending_profile_img_size"
                android:layout_alignParentBottom="true"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/spacing_2"
                android:layout_marginBottom="@dimen/spacing_4"
                android:background="@drawable/image_background_gradient_border"
                android:src="@drawable/placeholder" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/trending_profile_img_size"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/profile_img">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:layout_marginEnd="@dimen/spacing_6"
                    android:layout_toStartOf="@+id/likes_number"
                    android:src="@drawable/placeholder" />

                <TextView
                    android:id="@+id/likes_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/spacing_4"
                    android:layout_marginEnd="@dimen/spacing_2"
                    android:layout_marginBottom="@dimen/spacing_2"
                    android:text="@string/_50"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/size_8" />
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_main"
        android:layout_marginTop="@dimen/spacing_8"
        android:gravity="center"
        android:text="@string/travel"
        android:textColor="@color/black_color"
        android:textStyle="bold" />

</RelativeLayout>
